# Self-Hosted-Network-Dashboard

./: Cargo.toml  README.md  vercel.json
api/: process.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/dashboard/auth/: LoginPage.tsx
frontend/src/components/dashboard/layout/: DashboardHeader.tsx
frontend/src/components/dashboard/modals/: ActionModal.tsx  SettingsModal.tsx
frontend/src/components/dashboard/sections/: DevicesSection.tsx  QuickActionsSection.tsx  SystemMetricsSection.tsx  TerminalLogsSection.tsx  TopStatsSection.tsx  TrafficChartSection.tsx
frontend/src/components/ui/: ActionButton.tsx  StatCard.tsx
frontend/src/data/: dashboard.ts
frontend/src/types/: dashboard.ts
src/: lib.rs  main.rs
