[package]
name = "Self-Hosted-NetworkDashboard"
version = "0.1.0"
edition = "2024"
autobins = false

[lib]
name = "netdash_backend"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.12.3"
rand = "0.10.0"
chrono = "0.4.44"
vercel_runtime = "2"
http-body-util = "0.1"

[[bin]]
name = "process"
path = "api/process.rs"
